Añadido lenguaje BASH

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/plantillaBase.html
@@ -34,13 +34,8 @@
         <nav class="navbar navbar-expand-lg navbar-light ">
 
             <ul class="nav">
-                <li><a href="/" class="navbar-brand" style="color:white">NETTLAERER</a></li>
-                <li>
-                    <a href="{% url 'tecnologias' %}" class="navbar-brand" style="color:white">TECNOLOGIAS</a>
-                    <ul>
-                        <li><a href="{% url 'Bash' %}">Bash</a></li>
-                    </ul>
-                </li>
+                <li> <a href="/" class="navbar-brand" style="color:white">NETTLAERER</a></li>
+                <li> <a href="{% url 'tecnologias' %}" class="navbar-brand" style="color:white">TECNOLOGIAS</a></li>
                 <li><a href="{% url 'MineriaDatos' %}" class="navbar-brand" style="color:white">Mineria de Datos</a></li>
                 
                 <li><a href="{% url 'simuladorPython' %}" class="navbar-brand" style="color:white" target="_blank">SimuladorPython</a></li>
