--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -36,9 +36,10 @@
     <h1 style="font-family: 'Lobster' ">Información de interés</h1>
     <!--Botones para mostrar la informacion de interes-->
     <div style="text-align:center; padding:50px">
-        <button onclick="$('#archivosCSV').show(); $('#archivosARFF').hide(); $('#interpolacion').hide()">ArchivosCSV</button>
-        <button onclick="$('#archivosARFF').show(); $('#archivosCSV').hide(); $('#interpolacion').hide()">ArchivosARFF</button>
-        <button onclick="$('#interpolacion').show();$('#archivosARFF').hide(); $('#archivosCSV').hide()">INTERPOLACION</button>
+        <button onclick="$('#archivosCSV').show(); $('#archivosARFF').hide(); $('#interpolacion').hide(); $('#datosNulos').hide()">ArchivosCSV</button>
+        <button onclick="$('#archivosARFF').show(); $('#archivosCSV').hide(); $('#interpolacion').hide();$('#datosNulos').hide()">ArchivosARFF</button>
+        <button onclick="$('#interpolacion').show(); $('#archivosARFF').hide(); $('#archivosCSV').hide();$('#datosNulos').hide()">Interpolacion</button>
+        <button onclick="$('#datosNulos').show(); $('#archivosARFF').hide(); $('#archivosCSV').hide();$('#interpolacion').hide()">DatosNulos</button>
     </div>
     <!--Informacion Adicional de Archivos CSV-->
     <div id="archivosCSV" style="display:none">
@@ -63,6 +64,15 @@
         <h1 style="font-family: 'Lobster' ">INTERPOLACION</h1>
         <p style="color:yellow">
             <a href="https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.interpolate.html" class="btn btn-primary btn-large" target="_blank" >Aprender más&raquo;</a>
+        </p>
+    </div>
+    <!-- Informacion Adicional de Datos nulos-->
+    <div id="datosNulos" style="display:none">
+        <h1 style="font-family: 'Lobster' ">DATOS NULOS</h1>
+        <p style="color:yellow">
+            Se conoce como datos nulos a aquellos datos sin información alguna en alguno de los elementos de la variable. Estos pueden deberse a diversas causas como falta de información o no haber podido estimar la variable,  un error de entrada, o bien a un fenómeno externo que impidió la recolección de datos.
+            <br />
+            <a href="https://www.scribbr.com/statistics/missing-data/" class="btn btn-primary btn-large" target="_blank">Aprender más&raquo;</a>
         </p>
     </div>
 </div>
