--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/simuladorPython.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
           integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
     <!--Archivos pyscript-->
     <link rel="stylesheet" href="https://pyscript.net/latest/pyscript.css" />
     <script defer src="https://pyscript.net/latest/pyscript.js"></script>
@@ -295,8 +298,8 @@
                         display('No existen datos duplicados')
 
                 if __name__ == "__main__":
-                    titanic = cargarTitanic()
-                    display('Funcion principal')
+                    # titanic = cargarTitanic()
+                    # display('Funcion principal')
                     #titanic2 = titanic.copy().pipe(EliminarColumnas, ['PassengerId', 'Name', 'Ticket', 'Cabin']).pipe(LimpiarDataset)
                     #display('Mostrando procentaje datos perdidos: ', round(titanic2.isnull().sum() / len(titanic2) * 100))
                     #if titanic2.duplicated(keep='last').sum() == 0:
