Mejorados enlaces videos: Pyscript y Bash

--- a/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
+++ b/TTFProyectDjango/TTFProyectDjango/app/templates/app/MineriaDatos.html
@@ -162,8 +162,8 @@
         <div>
             <h2 style="font-family: 'Lobster'"><em>Videos Tutorial</em></h2>
             <p>
-                <a href="" style="color:yellow;margin-top:20px">Lectura Dataset</a>
-                <a href="" style="color:yellow; margin-left:30px">Conocer Dataset</a>
+                <a href="" style="color:yellow;margin-top:20px">PyScript</a>
+                <a href="" style="color:yellow; margin-left:30px">Bash</a>
             </p>
         </div>
     </div>
@@ -179,8 +179,8 @@
         <div>
             <h2 style="font-family: 'Lobster'"><em>Videos Tutorial</em></h2>
             <p>
-                <a href="" style="color:yellow;margin-top:20px">Limpieza de Datos</a>
-                <a href="" style="color:yellow; margin-left:30px">Transformacion de Datos</a>
+                <a href="" style="color:yellow;margin-top:20px">PyScript</a>
+                <a href="" style="color:yellow; margin-left:30px">Bash</a>
             </p>
         </div>
     </div>
@@ -196,9 +196,8 @@
         <div>
             <h2 style="font-family: 'Lobster'"><em>Videos Tutorial</em></h2>
             <p>
-                <a href="" style="color:yellow;margin-top:20px">Árbol de Decisión</a> 
-                <a href="" style="color:yellow; margin-left:30px">KNN</a>
-                <a href="" style="color:yellow; margin-left:30px">SVC</a>
+                <a href="" style="color:yellow;margin-top:20px">PyScript</a> 
+                <a href="" style="color:yellow; margin-left:30px">Bash</a>
             </p>
         </div>
     </div>
@@ -211,8 +210,7 @@
         <!--Videos tutoriales-->
         <div>
             <h2 style="font-family: 'Lobster'">Videos tutorial</h2>
-            <a href="" style="color:yellow; margin-top:20px">Datos obtenidos</a>
-            <a href="" style="color:yellow; margin-left:30px">Algoritmos de Clasificacion</a>
+            <a href="" style="color:yellow; margin-top:20px">EvaluacionResultados</a>
         </div>
     </div>
 </div>
@@ -221,8 +219,6 @@
 
 <div id="ejercicios" style="display:none">
     <h1 style="font-family: 'Lobster' ">Ejercicios Propuestos</h1>
-    <a href="" style="color:yellow">Video de Instrucciones</a>
-    <br />
     <a href="" style="color:yellow">Script</a>
 </div>
 
